# era_py

./: .gitignore  README.md  Untitled.ipynb  pyproject.toml
.github/workflows/: tests.yml
data-raw/: README.md  convert_farr_data_to_parquet.R
scripts/: benchmark_winsorize.py
src/era_data/: __init__.py
src/era_data/_data/: aaer_dates.parquet  aaer_firm_year.parquet  aus_bank_funds.meta.json  aus_bank_rets.parquet  aus_banks.meta.json  bloomfield_2021.parquet  by_tag_year.parquet  camp_attendance.meta.json  camp_attendance.parquet  cmsw_2018.meta.json  comp.meta.json  fhk_firm_years.meta.json  fhk_pilot.meta.json  gvkey_ciks.parquet  idd_dates.meta.json  idd_dates.parquet  iliev_2010.parquet  llz_2018.meta.json  michels_2017.meta.json  michels_2017.parquet  sho_r3000_gvkeys.meta.json  sho_r3000_gvkeys.parquet  sho_tickers.parquet  state_hq.meta.json  undisclosed_names.parquet  zhang_2007_events.parquet  zhang_2007_windows.meta.json
src/era_pl/: __init__.py  data.py  events.py  models.py  namespaces.py  plots.py  sec.py  tables.py  text.py  wrds.py
src/era_pl/_data/: aaer_dates.meta.json  aaer_firm_year.meta.json  aus_bank_rets.meta.json  by_tag_year.meta.json  cmsw_2018.parquet  fhk_pilot.parquet  llz_2018.parquet  sho_r3000.parquet  sho_r3000_sample.parquet  sho_tickers.meta.json  state_hq.parquet  test_scores.meta.json  test_scores.parquet  zhang_2007_events.meta.json  zhang_2007_windows.parquet
src/era_py/: __init__.py  data.py  downloads.py  events.py  plots.py  tables.py  text.py  wrds.py
src/era_py/_data/: apple_events.meta.json  apple_events.parquet  aus_bank_funds.parquet  aus_banks.parquet  bloomfield_2021.meta.json  camp_attendance.parquet  comp.parquet  fhk_firm_years.parquet  gvkey_ciks.meta.json  iliev_2010.meta.json  iliev_2010.parquet  sho_r3000.meta.json  sho_r3000_sample.meta.json  test_scores.parquet  undisclosed_names.meta.json
tests/: test_data.py  test_data_polars.py  test_downloads_polars.py  test_events_polars.py  test_ff_ind_polars.py  test_load_parquet_polars.py  test_namespaces_polars.py  test_numbered_lines.py  test_plotnine_star.py  test_rdplot_polars.py  test_smoke_polars.py
