[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "era_py"
version = "0.0.12"
description = "Helper functions for the Python version of Empirical Research in Accounting: Tools and Methods"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Ian D. Gow"}]
dependencies = [
  "numpy",
  "pandas",
  "pyarrow",
  "statsmodels",
  "scipy",
  "requests",
  "pyreadr",
  "patsy"
]

[project.optional-dependencies]
polars = ["polars"]
tables = ["great-tables"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
era_py = ["_data/*.parquet", "_data/*.meta.json"]
era_pl = ["_data/*.parquet", "_data/*.meta.json"]
