[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "era_py"
version = "0.0.18"
description = "Helper functions and data for Python versions of Empirical Research in Accounting: Tools and Methods"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Ian D. Gow"}]
dependencies = [
  "numpy",
  "pandas",
  "pyarrow",
  "statsmodels",
  "scipy",
  "ibis-framework[postgres]",
  "requests",
  "gdown",
  "pyreadr",
  "patsy",
  "python-dotenv"
]

[project.optional-dependencies]
polars = ["polars"]
tables = ["great-tables"]
plots = ["plotnine"]

[dependency-groups]
dev = [
  "plotnine",
  "pytest",
  "twine",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
era_py = ["_data/*.parquet", "_data/*.meta.json"]
era_pl = ["_data/*.parquet", "_data/*.meta.json"]
