[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "era_py"
version = "0.0.22"
description = "Helper functions and data for Python versions of Empirical Research in Accounting: Tools and Methods"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Ian D. Gow"}]
dependencies = [
  "numpy",
  "pandas",
  "pyarrow",
  "statsmodels",
  "scipy",
  "ibis-framework[postgres]",
  "requests",
  "gdown",
  "pyreadr",
  "patsy",
  "python-dotenv"
]

[project.optional-dependencies]
polars = ["polars"]
tables = ["great-tables"]
plots = ["plotnine"]

[dependency-groups]
dev = [
  "plotnine",
  "pytest",
  "twine",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
era_data = ["_data/*.parquet", "_data/*.meta.json"]
